--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,21 +14,21 @@ jobs:
 
     steps:
       - name: Fetch wheel(s) from release
-        uses: dsaltares/fetch-gh-release-asset@1.1.0
+        uses: dsaltares/fetch-gh-release-asset@master
         with:
           regex: true
           file: 'sidescansonareditor-.[0-9]*\.[0-9]*\.[0-9]*-py3-none-any\.whl'
           target: 'dist/'
 
       - name: Fetch sdist(s) from release
-        uses: dsaltares/fetch-gh-release-asset@1.1.0
+        uses: dsaltares/fetch-gh-release-asset@master
         with:
           regex: true
           file: 'sidescansonareditor-.[0-9]*\.[0-9]*\.[0-9]*\.tar.gz'
           target: 'dist/'
 
       - name: Publish to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v4
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository_url: https://test.pypi.org/legacy/
 
@@ -48,21 +48,21 @@ jobs:
 
     steps:
       - name: Fetch wheel(s) from release
-        uses: dsaltares/fetch-gh-release-asset@1.1.0
+        uses: dsaltares/fetch-gh-release-asset@master
         with:
           regex: true
           file: 'sidescansonareditor-.[0-9]*\.[0-9]*\.[0-9]*-py3-none-any\.whl'
           target: 'dist/'
 
       - name: Fetch sdist(s) from release
-        uses: dsaltares/fetch-gh-release-asset@1.1.0
+        uses: dsaltares/fetch-gh-release-asset@master
         with:
           regex: true
           file: 'sidescansonareditor-.[0-9]*\.[0-9]*\.[0-9]*\.tar.gz'
           target: 'dist/'
 
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v4
+        uses: pypa/gh-action-pypi-publish@release/v1
 
       - name: Test install from PyPI
         run: |
