--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = ["setuptools>=60",
-    "setuptools-scm>=8.0", "wheel"]
+    "setuptools-scm>=8.0", "wheel", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
