--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,5 @@ dependencies = [
 Repository = "https://github.com/MichalMotylinski/SideScanSonarEditor"
 
 [tool.setuptools]
-packages = ["widgets", "processing"]
+packages = ["widgets", "processing", "app"]
 include-package-data = true
