Updated toml file and app.py to enable running app using command after installation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,8 @@ Repository = "https://github.com/MichalMotylinski/SideScanSonarEditor"
 [tool.setuptools]
 packages = ["widgets", "processing"]
 include-package-data = true
+
+[tool.setuptools.entry_points]
+console_scripts = [
+    "sidescansonareditor = app:window"  # This will call the `run_gui()` function in app.py to start the GUI
+]
