--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -24,14 +24,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-    - name: Install test dependencies
-      run: |
-        poetry install --with dev
     - name: Test with pytest
       run: |
-        poetry run pytest --cov-report xml --cov=SideScanSonarEditor/
+        pytest --cov-branch --cov-report=xml
     - name: Upload coverage reports to Codecov
     	uses: codecov/codecov-action@v5
     	with:
