--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,10 +25,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Poetry
-      uses: snok/install-poetry@v2
+      uses: snok/install-poetry@v1
     - name: Install test dependencies
       run: |
-        poetry install --with dev
+        poetry install
     - name: Test with pytest
       run: |
         poetry run pytest --cov-report xml --cov=SideScanSonarEditor/
