--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,5 +33,9 @@ packages = ["widgets", "processing"]
 py-modules = ["app"]
 include-package-data = true
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.0"
+pytest-cov = "^4.0"
+
 [project.scripts]
 sidescansonareditor = "app:window"  
