--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,39 +1,41 @@
-name: tests
+name: Code Coverage
 
 on:
   push:
-    branches: [ master, actions-tests ]
+    branches:
+      - [ master, actions-tests ]
   pull_request:
-    branches: [ master, actions-tests ]
-  workflow_dispatch:
-
-permissions:
-  contents: read
+    branches:
+      - [ master, actions-tests ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-    - name: Install test dependencies
-      run: |
-        poetry install --no-root --with dev
-    - name: Test with pytest
-      run: |
-        poetry run pytest --cov-report xml --cov=SideScanSonarEditor/
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        slug: MichalMotylinski/SideScanSonarEditor
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
+
+      - name: Run tests and collect coverage
+        run: |
+          pytest --cov=SideScanSonarEditor --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}  # Set in GitHub Secrets
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-side-scan-sonar
+          fail_ci_if_error: true
