--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,39 +1,35 @@
-name: Code Coverage
+name: Test
 
-on:
+on: 
   push:
-    branches: [ master, actions-tests ]
   pull_request:
     branches: [ master, actions-tests ]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-
+    name: ${{ matrix.os}} / py${{ matrix.python_version }}
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [Ubuntu, Windows]
+        python_version: ['3.8', '3.9', '3.10', '3.11']
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
+        name: Install Python ${{ matrix.python_version }}
         with:
-          python-version: '3.9'
+          python-version: ${{ matrix.python_version }}
+          architecture: x64
 
-      - name: Install dependencies
+      - name: Install (testing) requirements
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install -r requirements.txt
-          pip install pytest pytest-cov
-
-      - name: Run tests and collect coverage
+      - name: Install SideScanSonarEditor to be tested
         run: |
-          pytest --cov=SideScanSonarEditor --cov-report=xml
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}  # Set in GitHub Secrets
-          file: ./coverage.xml
-          flags: unittests
-          name: codecov-side-scan-sonar
-          fail_ci_if_error: true
+          pip install .
+      - name: Run tests for ${{ matrix.python_version }} through nox
+        run: |
+          pipx run nox --non-interactive --error-on-missing-interpreter --session "tests-${{ matrix.python_version }}"
