--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,19 +1,19 @@
 name: Test
 
-on: 
+on:
   push:
   pull_request:
     branches: [ master, actions-tests ]
 
 jobs:
   test:
-    name: ${{ matrix.os}} / py${{ matrix.python_version }}
+    name: ${{ matrix.os }} / py${{ matrix.python_version }}
     runs-on: ${{ matrix.os }}-latest
     strategy:
-      fail-fast: false
       matrix:
-        os: [Ubuntu, Windows]
+        os: [ubuntu, windows]
         python_version: ['3.8', '3.9', '3.10', '3.11']
+
     steps:
       - uses: actions/checkout@v3
 
@@ -23,13 +23,13 @@ jobs:
           python-version: ${{ matrix.python_version }}
           architecture: x64
 
-      - name: Install (testing) requirements
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools
           pip install -r requirements.txt
-      - name: Install SideScanSonarEditor to be tested
+
+      - name: Run tests with pytest
         run: |
-          pip install .
-      - name: Run tests for ${{ matrix.python_version }} through nox
-        run: |
-          pipx run nox --non-interactive --error-on-missing-interpreter --session "tests-${{ matrix.python_version }}"
+          pip install pytest
+          pytest
+
