--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [build-system]
 requires = ["setuptools>=60",
-    "setuptools-scm>=8.0", "wheel"]
+    "setuptools-scm>=8.0",
+    "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "SideScanSonarEditor"
-version = "0.0.8" 
+version = "0.0.9" 
 description = "A Python package for editing side-scan sonar data."
 authors = [
     {name = "Michal Motylinski", email = "motylm66@gmail.com"}
